--- a/Meo.html
+++ b/Meo.html
@@ -325,6 +325,7 @@
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
             <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
             <li><a href="Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
+            <li><a href="Video.html"><i class="fa-solid fa-video"></i> Video</a></li>
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
         </ul>
         <!-- <h2 class="text-center text-primary mb-4">Bộ ảnh ôn thi lý thuyết & thực hành</h2> -->
@@ -361,22 +362,26 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
     <footer id="footer">
         <div class="footer-content">
             <p><strong>www.Taylaimoi.com</strong></p>
             <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
-            <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook" style="color:white; padding: 10px; font-size: 14px;">
-                <img src="image/icons8_facebook.svg" style="width: 24px; height: 24px" alt="Chat Facebook"> Facebook Taylaimoi
+            <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook">
+                <img src="image/icons8_facebook.svg" alt="Chat Facebook"> Facebook Taylaimoi
             </a>
-            <a href="https://zalo.me/0989465167" class="zalo-button" target="_blank" title="Chat Zalo" style="color:white ;padding: 10px; font-size: 14px;">
-                <img src="image/icons8_zalo.svg" style="width: 24px; height: 24px; " alt="Chat Zalo"> Zalo Tiếp nhận hồ sơ
+            <a href="https://zalo.me/0904639896" class="zalo-button" target="_blank" title="Chat Zalo">
+                <img src="image/icons8_zalo.svg" alt="Chat Zalo"> Zalo Tiếp nhận hồ sơ
             </a>
-            <a href="https://www.tiktok.com/@kenhtaylaimoi.com" class="youtube-button" target="_blank" title="Xem Video" style="color:white ;padding: 10px; font-size: 14px;">
-                <img src="image/icons8_tiktok.svg" style="width: 24px; height: 24px;" alt="Xem Video">Tiktok Taylaimoi
+            <a href="https://www.tiktok.com/@kenhtaylaimoi.com" class="youtube-button" target="_blank" title="Xem Video">
+                <img src="image/icons8_tiktok.svg" alt="Xem Video"> Tiktok Taylaimoi
             </a>
             <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
+            <div class="sub-text"> (©) Bản quyền của thương hiệu Taylaimoi.com | Thiết kế bởi letuantbvn </div>
         </div>
     </footer>
+
     <section class="contact-section">
         <a href="tel:0989465167" class="call-button" title="Gọi ngay"><i class="fas fa-phone"></i></a>
     </section>
