Update fix code

--- a/Video.html
+++ b/Video.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video - Taylaimoi.com</title>
+    <title>Video thương hiệu Taylaimoi</title>
+    <meta name="description" content="600 Câu Hỏi Sát Hạch Lái Xe 2025 - Ôn thi lý thuyết bằng lái xe hạng B, C1,C, D,D1,D2 với bộ đề chuẩn của Bộ Công An">
+    <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết">
+    <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266">
+    <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
@@ -313,7 +317,7 @@
     <!-- Video Page Content -->
     <section class="video-page">
         <div class="video-header">
-            <h1><i class="fas fa-video"></i> VIDEO HƯỚNG DẪN LÁI XE</h1>
+            <h1><i class="fas fa-video"></i> VIDEO THƯƠNG HIỆU</h1>
             <p>Xem các video hướng dẫn lái xe chi tiết từ các chuyên gia hàng đầu của Taylaimoi.com. Học cách thực hành lái xe an toàn và hiệu quả.</p>
         </div>
 
@@ -329,50 +333,51 @@
             <!-- Video 1 -->
             <div class="video-card" data-category="practice">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/Kh0ZXVpW0r4/maxresdefault.jpg" alt="Hướng dẫn lái xe số sàn cơ bản">
-                    <div class="play-icon" data-video="0fNAC9D0LKM">
+                    <img src="https://img.youtube.com/vi/f3eFAo18ujc/maxresdefault.jpg" alt="Hướng dẫn lái xe số sàn cơ bản">
+                    <div class="play-icon" data-video="f3eFAo18ujc">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Hướng dẫn lái xe số sàn cơ bản cho người mới bắt đầu</h3>
-                    <p class="video-description">Video hướng dẫn chi tiết các thao tác lái xe số sàn cơ bản, cách vào số, nhả côn, phối hợp chân côn và chân ga.</p>
+                    <h3 class="video-title">Sự hoàn hảo từ an toàn với công nghệ thực tế ảo trong đào tạo lái xe ô tô</h3>
+                    <p class="video-description">Taylaimoi.com - Sự hoàn hảo từ an toàn với công nghệ thực tế ảo trong đào tạo lái xe ô tô</p>
                     <div class="video-meta">
-                        <span><i class="far fa-clock"></i> 15:30</span>
+                        <span><i class="far fa-clock"></i> 5:51 </span>
                         <span><i class="far fa-calendar"></i> 10/05/2025</span>
                     </div>
                 </div>
             </div>
 
             <!-- Video 2 -->
-            <div class="video-card" data-category="theory">
+            <div class="video-card" data-category="practice">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/7X8II6J-6mI/maxresdefault.jpg" alt="Mẹo thi lý thuyết 600 câu">
-                    <div class="play-icon" data-video="7X8II6J-6mI">
+                    <img src="https://img.youtube.com/vi/Kh0ZXVpW0r4/maxresdefault.jpg" alt="Hướng dẫn lái xe số sàn cơ bản">
+                    <div class="play-icon" data-video="Kh0ZXVpW0r4">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Mẹo thi lý thuyết 600 câu dễ nhớ, đạt điểm cao</h3>
-                    <p class="video-description">Tổng hợp các mẹo thi lý thuyết 600 câu dễ nhớ nhất, giúp bạn ôn thi hiệu quả và đạt điểm cao trong kỳ thi sát hạch.</p>
+                    <h3 class="video-title">VTV - Học lái xe với công nghệ thực tế ảo đầu tiên duy nhất tại Việt Nam</h3>
+                    <p class="video-description">Taylaimoi.com - Sự hoàn hảo từ an toàn với công nghệ thực tế ảo trong đào tạo lái xe ô tô</p>
                     <div class="video-meta">
-                        <span><i class="far fa-clock"></i> 22:45</span>
-                        <span><i class="far fa-calendar"></i> 28/04/2025</span>
+                        <span><i class="far fa-clock"></i> 5:51 </span>
+                        <span><i class="far fa-calendar"></i> 10/05/2025</span>
                     </div>
                 </div>
             </div>
 
+
             <!-- Video 3 -->
             <div class="video-card" data-category="practice">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/8HqF9a7vD5Y/maxresdefault.jpg" alt="Kỹ thuật lùi xe và đỗ xe">
-                    <div class="play-icon" data-video="8HqF9a7vD5Y">
+                    <img src="https://img.youtube.com/vi/VXocTs6f-S0/maxresdefault.jpg" alt="Kỹ thuật lùi xe và đỗ xe">
+                    <div class="play-icon" data-video="VXocTs6f-S0">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Kỹ thuật lùi xe và đỗ xe an toàn, chính xác</h3>
-                    <p class="video-description">Hướng dẫn chi tiết các kỹ thuật lùi xe, đỗ xe song song, vuông góc và chéo một cách an toàn và chính xác.</p>
+                    <h3 class="video-title">Học lái xe ô tô bằng công nghệ giả lập bạn đã thử chưa?</h3>
+                    <p class="video-description">Học lái xe ô tô bằng công nghệ giả lập bạn đã thử chưa? Đăng kí ngay tại taylaimoi.com ngay hôm nay</p>
                     <div class="video-meta">
                         <span><i class="far fa-clock"></i> 18:20</span>
                         <span><i class="far fa-calendar"></i> 15/04/2025</span>
@@ -381,10 +386,10 @@
             </div>
 
             <!-- Video 4 -->
-            <div class="video-card" data-category="safety">
+            <div class="video-card" data-category="practice">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/Kh0ZXVpW0r4/maxresdefault.jpg" alt="Xử lý tình huống nguy hiểm">
-                    <div class="play-icon" data-video="Kh0ZXVpW0r4">
+                    <img src="https://img.youtube.com/vi/TFLwTCamQDc/maxresdefault.jpg" alt="Hướng dẫn thực hành lái xe">
+                    <div class="play-icon" data-video="TFLwTCamQDc">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
@@ -401,14 +406,14 @@
             <!-- Video 5 -->
             <div class="video-card" data-category="tips">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/Kh0ZXVpW0r4/maxresdefault.jpg" alt="Mẹo thi sa hình">
-                    <div class="play-icon" data-video="Kh0ZXVpW0r4">
+                    <img src="https://img.youtube.com/vi/kZMsDWD2smE/maxresdefault.jpg" alt="Mẹo thi sa hình">
+                    <div class="play-icon" data-video="kZMsDWD2smE">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Mẹo thi sa hình hạng B đạt điểm tuyệt đối</h3>
-                    <p class="video-description">Bí quyết và mẹo thi sa hình hạng B giúp bạn vượt qua 11 bài thi sa hình một cách dễ dàng và đạt điểm tuyệt đối.</p>
+                    <h3 class="video-title">Trải nghiệm công nghệ thực tế ảo học lái ô tô đầu tiên tại Việt Nam </h3>
+                    <p class="video-description">Trải nghiệm công nghệ thực tế ảo học lái ô tô đầu tiên tại Việt Nam cùng với nghệ sĩ Nguyễn Hải.</p>
                     <div class="video-meta">
                         <span><i class="far fa-clock"></i> 30:15</span>
                         <span><i class="far fa-calendar"></i> 22/03/2025</span>
@@ -419,14 +424,14 @@
             <!-- Video 6 -->
             <div class="video-card" data-category="safety">
                 <div class="video-thumbnail">
-                    <img src="https://img.youtube.com/vi/Kh0ZXVpW0r4/maxresdefault.jpg" alt="Lái xe ban đêm an toàn">
-                    <div class="play-icon" data-video="Kh0ZXVpW0r4">
+                    <img src="https://img.youtube.com/vi/2EUOqbFdyts/maxresdefault.jpg" alt="An toàn khi lái xe ban đêm">
+                    <div class="play-icon" data-video="2EUOqbFdyts">
                         <i class="fas fa-play"></i>
                     </div>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Kinh nghiệm lái xe ban đêm an toàn</h3>
-                    <p class="video-description">Hướng dẫn lái xe ban đêm an toàn, cách sử dụng đèn pha/cốt đúng cách, xử lý tình huống khi lái xe trong điều kiện thiếu sáng.</p>
+                    <h3 class="video-title">Dịch vụ duy nhất về bảo vệ tính mạng khi tham gia học lái xe</h3>
+                    <p class="video-description">Hướng dẫn thoát hiểm bảo vệ tính mạng khi tham gia học lái xe</p>
                     <div class="video-meta">
                         <span><i class="far fa-clock"></i> 12:40</span>
                         <span><i class="far fa-calendar"></i> 10/03/2025</span>
