--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </nav>
     <main class="container">
-        <ul class="main-menu">
+        <ul class="main-menu" id="mainMenu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
             <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
@@ -355,7 +355,205 @@
             <i class="fas fa-volume-up"></i>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="footer-content">
+            <p><strong>www.Taylaimoi.com</strong></p>
+            <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
+            <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook">
+                <img src="image/icons8_facebook.svg" alt="Chat Facebook"> Facebook Taylaimoi
+            </a>
+            <a href="https://zalo.me/0904639896" class="zalo-button" target="_blank" title="Chat Zalo">
+                <img src="image/icons8_zalo.svg" alt="Chat Zalo"> Zalo Tiếp nhận hồ sơ
+            </a>
+            <a href="https://www.tiktok.com/@kenhtaylaimoi.com" class="youtube-button" target="_blank" title="Xem Video">
+                <img src="image/icons8_tiktok.svg" alt="Xem Video"> Tiktok Taylaimoi
+            </a>
+            <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
+            <div class="sub-text"> (©) Bản quyền của thương hiệu Taylaimoi.com | Thiết kế bởi letuantbvn </div>
+        </div>
+    </footer>
+
+    <!-- Thêm script cho tab -->
     <script>
+        document.querySelectorAll('.tab').forEach(tab => {
+            tab.addEventListener('click', function() {
+                // Loại bỏ active từ tất cả tab và panel
+                document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+                document.querySelectorAll('.tab-panel').forEach(p => p.classList.remove('active'));
+
+                // Thêm lại active cho tab được bấm
+                tab.classList.add('active');
+                const panelId = tab.dataset.tab;
+                const panel = document.getElementById(panelId);
+                if (panel) panel.classList.add('active');
+            });
+        });
+        // Thêm sự kiện click cho các nút "Bắt đầu luyện tập"
+        document.querySelectorAll('.practice-btn').forEach(button => {
+            button.addEventListener('click', function() {
+                const chapter = this.dataset.chapter;
+                console.log(`Bạn đã chọn chương: ${chapter}`);
+                // Có thể thêm logic khác nếu cần
+            });
+        });
+        // Thêm sự kiện click cho các nút "Luyện tập ngay"
+        document.querySelectorAll('.btn-outline').forEach(button => {
+            button.addEventListener('click', function() {
+                const href = this.getAttribute('href');
+                console.log(`Bạn đã chọn luyện tập: ${href}`);
+                // Có thể thêm logic khác nếu cần
+            });
+        });
+        // Thêm sự kiện click cho nút gọi điện
+        document.querySelector('.call-button').addEventListener('click', function() {
+            console.log('Gọi ngay đến số hotline');
+            // Có thể thêm logic khác nếu cần
+        });
+        // Thêm sự kiện click cho các nút liên kết mạng xã hội
+        document.querySelectorAll('.fb-button, .zalo-button, .youtube-button').forEach(button => {
+            button.addEventListener('click', function() {
+                const href = this.getAttribute('href');
+                console.log(`Bạn đã chọn liên kết: ${href}`);
+                // Có thể thêm logic khác nếu cần
+            });
+        });
+        document.addEventListener('DOMContentLoaded', function() {
+            // Xử lý ẩn .html khi click vào menu
+            const menuLinks = document.querySelectorAll('a[href$=".html"]');
+            menuLinks.forEach(link => {
+                link.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const newUrl = this.getAttribute('href').replace('.html', '');
+                    history.pushState(null, null, newUrl);
+                    window.location.href = this.getAttribute('href');
+                });
+            });
+        });
+        // Hiển thị thông báo khi người dùng nhấp vào nút gọi điện
+        document.querySelector('.call-button').addEventListener('click', function() {
+            alert('Bạn đã nhấp vào nút gọi điện!');
+        });
+    </script>
+
+    <!-- Thêm script cho carousel -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Danh sách hình ảnh tiêu biểu
+            const featuredImages = [{
+                src: "image/Gallery/img (1).webp",
+                alt: "Nhà sáng lập Taylaimoi.com",
+                caption: "Nhà sáng lập Taylaimoi.com và 120mophong.com"
+            }, {
+                src: "image/Gallery/img (2).webp",
+                alt: "FPT và Taylaimoi.com",
+                caption: "Hợp tác với các đơn vị tập đoàn hàng đầu Việt Nam"
+            }, {
+                src: "image/Gallery/img (3.1).webp",
+                alt: "Nhà sáng lập gặp học viên",
+                caption: "Nhà sáng lập cùng gặp mặt học viên người nổi tiếng tại Việt Nam"
+            }, {
+                src: "image/Gallery/img (4).webp",
+                alt: "Đội ngũ giáo viên",
+                caption: "Đội ngũ giáo viên tận tâm, chuyên nghiệp của Taylaimoi.com"
+            }, {
+                src: "image/Gallery/img (5).webp",
+                alt: "Trao chứng nhận",
+                caption: "Trao chứng nhận cho các giáo viên giảng dạy bằng công nghệ"
+            }, {
+                src: "image/Gallery/img (6).webp",
+                alt: "Học viên thực hành",
+                caption: "Buổi đào tạo thực hành với công nghệ mô phỏng hiện đại"
+            }, {
+                src: "image/Gallery/img (7).webp",
+                alt: "Mô hình mô phỏng giảng dạy",
+                caption: "Mô hình mô phỏng giảng dạy trực quan, dễ hiểu"
+            }, {
+                src: "image/Gallery/img (8).webp",
+                alt: "Học viên thực hành học tập",
+                caption: "Học viên thực hành học tập với mô hình mô phỏng trên xe thật"
+            }, {
+                src: "image/Gallery/img (9).webp",
+                alt: "Khai trương văn phòng mới",
+                caption: "Khai trương văn phòng mới của Taylaimoi.com"
+            }, {
+                src: "image/Gallery/img (10.1).webp",
+                alt: "Khai trương văn phòng tại Chương Mỹ",
+                caption: "Đội ngũ giáo viên khai trương văn phòng tại Chương Mỹ"
+            }, {
+                src: "image/Gallery/img (31).webp",
+                alt: "Đội ngũ giáo viên dự khai trương văn phòng tại Chương Mỹ",
+                caption: "Đội ngũ giáo viên dự khai trương văn phòng tại Chương Mỹ"
+            }];
+
+            const carousel = document.querySelector('.carousel');
+            const indicatorsContainer = document.querySelector('.carousel-indicators');
+            let currentIndex = 0;
+
+            // Tạo các slide và indicators
+            featuredImages.forEach((image, index) => {
+                // Tạo slide
+                const slide = document.createElement('div');
+                slide.className = 'carousel-item';
+                slide.style.backgroundImage = `url('${image.src}')`;
+
+                const caption = document.createElement('div');
+                caption.className = 'carousel-caption';
+                caption.textContent = image.caption;
+
+                slide.appendChild(caption);
+                carousel.appendChild(slide);
+
+                // Tạo indicator
+                const indicator = document.createElement('div');
+                indicator.className = 'carousel-indicator';
+                if (index === 0) indicator.classList.add('active');
+                indicator.dataset.index = index;
+
+                indicator.addEventListener('click', () => {
+                    goToSlide(index);
+                });
+
+                indicatorsContainer.appendChild(indicator);
+            });
+
+            // Xử lý nút điều hướng
+            document.querySelector('.prev-btn').addEventListener('click', () => {
+                goToSlide(currentIndex - 1);
+            });
+
+            document.querySelector('.next-btn').addEventListener('click', () => {
+                goToSlide(currentIndex + 1);
+            });
+
+            // Hàm chuyển đến slide cụ thể
+            function goToSlide(index) {
+                // Xử lý chỉ số khi vượt quá giới hạn
+                if (index < 0) {
+                    index = featuredImages.length - 1;
+                } else if (index >= featuredImages.length) {
+                    index = 0;
+                }
+
+                // Cập nhật vị trí carousel
+                carousel.style.transform = `translateX(-${index * 100}%)`;
+
+                // Cập nhật indicator active
+                document.querySelectorAll('.carousel-indicator').forEach(ind => {
+                    ind.classList.remove('active');
+                });
+                document.querySelector(`.carousel-indicator[data-index="${index}"]`).classList.add('active');
+
+                currentIndex = index;
+            }
+
+            // Tự động chuyển slide
+            setInterval(() => {
+                goToSlide(currentIndex + 1);
+            }, 5000);
+        });
+
         // Xử lý âm thanh nền
         document.addEventListener('DOMContentLoaded', function() {
             // Danh sách bài hát
@@ -519,230 +717,6 @@
                     playCurrentSong();
                 }
             }, 2000);
-        });
-    </script>
-
-
-
-    <!-- Footer -->
-    <footer id="footer">
-        <div class="footer-content">
-            <p><strong>www.Taylaimoi.com</strong></p>
-            <p>Địa chỉ: 143 Trần Phú, Văn Quán, Hà Đông, Hà Nội</p>
-            <a href="https://www.facebook.com/taylaimoi2266" class="fb-button" target="_blank" title="Chat Facebook">
-                <img src="image/icons8_facebook.svg" alt="Chat Facebook"> Facebook Taylaimoi
-            </a>
-            <a href="https://zalo.me/0904639896" class="zalo-button" target="_blank" title="Chat Zalo">
-                <img src="image/icons8_zalo.svg" alt="Chat Zalo"> Zalo Tiếp nhận hồ sơ
-            </a>
-            <a href="https://www.tiktok.com/@kenhtaylaimoi.com" class="youtube-button" target="_blank" title="Xem Video">
-                <img src="image/icons8_tiktok.svg" alt="Xem Video"> Tiktok Taylaimoi
-            </a>
-            <p>Hotline: 09.8888.2266 | Email: Taylaimoi2266@gmail.com</p>
-            <div class="sub-text"> (©) Bản quyền của thương hiệu Taylaimoi.com | Thiết kế bởi letuantbvn </div>
-        </div>
-    </footer>
-    <script>
-        document.querySelectorAll('.tab').forEach(tab => {
-            tab.addEventListener('click', function() {
-                // Loại bỏ active từ tất cả tab và panel
-                document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
-                document.querySelectorAll('.tab-panel').forEach(p => p.classList.remove('active'));
-
-                // Thêm lại active cho tab được bấm
-                tab.classList.add('active');
-                const panelId = tab.dataset.tab;
-                const panel = document.getElementById(panelId);
-                if (panel) panel.classList.add('active');
-            });
-        });
-    </script>
-    <script>
-        // Thêm sự kiện click cho các nút "Bắt đầu luyện tập"
-        document.querySelectorAll('.practice-btn').forEach(button => {
-            button.addEventListener('click', function() {
-                const chapter = this.dataset.chapter;
-                console.log(`Bạn đã chọn chương: ${chapter}`);
-                // Có thể thêm logic khác nếu cần
-            });
-        });
-    </script>
-    <script>
-        // Thêm sự kiện click cho các nút "Luyện tập ngay"
-        document.querySelectorAll('.btn-outline').forEach(button => {
-            button.addEventListener('click', function() {
-                const href = this.getAttribute('href');
-                console.log(`Bạn đã chọn luyện tập: ${href}`);
-                // Có thể thêm logic khác nếu cần
-            });
-        });
-    </script>
-    <script>
-        // Thêm sự kiện click cho nút gọi điện
-        document.querySelector('.call-button').addEventListener('click', function() {
-            console.log('Gọi ngay đến số hotline');
-            // Có thể thêm logic khác nếu cần
-        });
-    </script>
-    <script>
-        // Thêm sự kiện click cho các nút liên kết mạng xã hội
-        document.querySelectorAll('.fb-button, .zalo-button, .youtube-button').forEach(button => {
-            button.addEventListener('click', function() {
-                const href = this.getAttribute('href');
-                console.log(`Bạn đã chọn liên kết: ${href}`);
-                // Có thể thêm logic khác nếu cần
-            });
-        });
-    </script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Xử lý ẩn .html khi click vào menu
-            const menuLinks = document.querySelectorAll('a[href$=".html"]');
-            menuLinks.forEach(link => {
-                link.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    const newUrl = this.getAttribute('href').replace('.html', '');
-                    history.pushState(null, null, newUrl);
-                    window.location.href = this.getAttribute('href');
-                });
-            });
-        });
-    </script>
-    <!-- <script>
-        // Hiển thị thông báo khi người dùng rời khỏi trang
-        window.addEventListener('beforeunload', function(event) {
-            event.preventDefault();
-            event.returnValue = '';
-        });
-    </script> -->
-    <!-- <script>
-        // Hiển thị thông báo khi người dùng tải lại trang
-        window.addEventListener('load', function() {
-            alert('Chào mừng bạn đến với 600 Câu Hỏi Sát Hạch Lái Xe 2025 - Taylaimoi.com!');
-        });
-    </script> -->
-    <script>
-        // Hiển thị thông báo khi người dùng nhấp vào nút gọi điện
-        document.querySelector('.call-button').addEventListener('click', function() {
-            alert('Bạn đã nhấp vào nút gọi điện!');
-        });
-    </script>
-
-    <!-- Thêm script cho carousel -->
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Danh sách hình ảnh tiêu biểu
-            const featuredImages = [{
-                src: "image/Gallery/img (1).webp",
-                alt: "Nhà sáng lập Taylaimoi.com",
-                caption: "Nhà sáng lập Taylaimoi.com và 120mophong.com"
-            }, {
-                src: "image/Gallery/img (2).webp",
-                alt: "FPT và Taylaimoi.com",
-                caption: "Hợp tác với các đơn vị tập đoàn hàng đầu Việt Nam"
-            }, {
-                src: "image/Gallery/img (3.1).webp",
-                alt: "Nhà sáng lập gặp học viên",
-                caption: "Nhà sáng lập cùng gặp mặt học viên người nổi tiếng tại Việt Nam"
-            }, {
-                src: "image/Gallery/img (4).webp",
-                alt: "Đội ngũ giáo viên",
-                caption: "Đội ngũ giáo viên tận tâm, chuyên nghiệp của Taylaimoi.com"
-            }, {
-                src: "image/Gallery/img (5).webp",
-                alt: "Trao chứng nhận",
-                caption: "Trao chứng nhận cho các giáo viên giảng dạy bằng công nghệ"
-            }, {
-                src: "image/Gallery/img (6).webp",
-                alt: "Học viên thực hành",
-                caption: "Buổi đào tạo thực hành với công nghệ mô phỏng hiện đại"
-            }, {
-                src: "image/Gallery/img (7).webp",
-                alt: "Mô hình mô phỏng giảng dạy",
-                caption: "Mô hình mô phỏng giảng dạy trực quan, dễ hiểu"
-            }, {
-                src: "image/Gallery/img (8).webp",
-                alt: "Học viên thực hành học tập",
-                caption: "Học viên thực hành học tập với mô hình mô phỏng trên xe thật"
-            }, {
-                src: "image/Gallery/img (9).webp",
-                alt: "Khai trương văn phòng mới",
-                caption: "Khai trương văn phòng mới của Taylaimoi.com"
-            }, {
-                src: "image/Gallery/img (10.1).webp",
-                alt: "Khai trương văn phòng tại Chương Mỹ",
-                caption: "Đội ngũ giáo viên khai trương văn phòng tại Chương Mỹ"
-            }, {
-                src: "image/Gallery/img (31).webp",
-                alt: "Đội ngũ giáo viên dự khai trương văn phòng tại Chương Mỹ",
-                caption: "Đội ngũ giáo viên dự khai trương văn phòng tại Chương Mỹ"
-            }];
-
-            const carousel = document.querySelector('.carousel');
-            const indicatorsContainer = document.querySelector('.carousel-indicators');
-            let currentIndex = 0;
-
-            // Tạo các slide và indicators
-            featuredImages.forEach((image, index) => {
-                // Tạo slide
-                const slide = document.createElement('div');
-                slide.className = 'carousel-item';
-                slide.style.backgroundImage = `url('${image.src}')`;
-
-                const caption = document.createElement('div');
-                caption.className = 'carousel-caption';
-                caption.textContent = image.caption;
-
-                slide.appendChild(caption);
-                carousel.appendChild(slide);
-
-                // Tạo indicator
-                const indicator = document.createElement('div');
-                indicator.className = 'carousel-indicator';
-                if (index === 0) indicator.classList.add('active');
-                indicator.dataset.index = index;
-
-                indicator.addEventListener('click', () => {
-                    goToSlide(index);
-                });
-
-                indicatorsContainer.appendChild(indicator);
-            });
-
-            // Xử lý nút điều hướng
-            document.querySelector('.prev-btn').addEventListener('click', () => {
-                goToSlide(currentIndex - 1);
-            });
-
-            document.querySelector('.next-btn').addEventListener('click', () => {
-                goToSlide(currentIndex + 1);
-            });
-
-            // Hàm chuyển đến slide cụ thể
-            function goToSlide(index) {
-                // Xử lý chỉ số khi vượt quá giới hạn
-                if (index < 0) {
-                    index = featuredImages.length - 1;
-                } else if (index >= featuredImages.length) {
-                    index = 0;
-                }
-
-                // Cập nhật vị trí carousel
-                carousel.style.transform = `translateX(-${index * 100}%)`;
-
-                // Cập nhật indicator active
-                document.querySelectorAll('.carousel-indicator').forEach(ind => {
-                    ind.classList.remove('active');
-                });
-                document.querySelector(`.carousel-indicator[data-index="${index}"]`).classList.add('active');
-
-                currentIndex = index;
-            }
-
-            // Tự động chuyển slide
-            setInterval(() => {
-                goToSlide(currentIndex + 1);
-            }, 5000);
         });
     </script>
 </body>
