--- a/index.html
+++ b/index.html
@@ -719,6 +719,19 @@
             }, 2000);
         });
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N65WE7MF5L">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-N65WE7MF5L');
+    </script>
 </body>
 
 </html>
