--- a/exam.html
+++ b/exam.html
@@ -9,7 +9,8 @@
     <meta name="keywords" content="thi bằng lái xe, 600 câu hỏi sát hạch, luyện thi lái xe, mẹo thi lý thuyết">
     <meta name="author" content="600 Câu Hỏi Sát Hạch Lái Xe 2025, Taylaimoi.com, taylaimoi2266">
     <link rel="icon" type="image/x-icon" href="image/favicon-16x16.png">
-    <link rel="stylesheet" href="assets/style_part.css">
+    <link rel="stylesheet" href="assets/style_exam.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 </head>
 
@@ -53,7 +54,13 @@
             </div>
 
             <button type="submit" class="btn-start">Bắt đầu làm bài</button>
+
         </form>
+        <!-- Container mới cho nút học viên taylaimoi
+        <div class="skip-info-container">
+            <p class="skip-text">Bạn là học viên của Taylaimoi.com? Lựa chọn xác nhận ngay</p>
+            <button class="btn-skip-info" id="skip-info-btn">Xác nhận học viên <i class="bi bi-arrow-right-circle-fill"></i> </button>
+        </div> -->
         <div class="sub-text"> (©) Bản quyền từ Taylaimoi.com</div>
     </div>
 
