--- a/Gallery.html
+++ b/Gallery.html
@@ -34,24 +34,6 @@
             window.open('https://zalo.me/0904639896', '_blank');
         });
     </script>
-    <section>
-        <div class="preloader">
-            <div class="loading">
-                <img src="image/logo.png" alt="Logo Taylaimoi.com" class="logo-img">
-                <p>Đang tải dữ liệu, vui lòng chờ...</p>
-                <div class="spinner"></div>
-            </div>
-        </div>
-
-        <script>
-            // Ẩn preloader sau 3 giây
-            setTimeout(() => {
-                const preloader = document.querySelector('.preloader');
-                if (preloader) preloader.style.display = 'none';
-            }, 2000);
-        </script>
-    </section>
-
     <!--Start of Tawk.to Script-->
     <script script type="text/javascript">
         var Tawk_API = Tawk_API || {},
@@ -93,15 +75,19 @@
     <section class="contact-section">
         <a href="tel:0989465167" class="call-button" title="Gọi ngay"><i class="fas fa-phone"></i></a>
     </section>
-    <main class="container">
-        <ul class="main-menu">
+
+    <div class="container py-4">
+        <ul class="main-menu" id="mainMenu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
+            <li><a href="Sahinh.html"><i class="fa-solid fa-image"></i> 11 Bài sa hình</a></li>
             <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
             <li><a href="Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
             <li><a href="Video.html"><i class="fa-solid fa-video"></i> Video</a></li>
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
         </ul>
+    </div>
+    <main class="container">
         <section class="stats-section">
             <div class="container stats-container">
                 <div class="stat-box">
