Update Css Menu

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </div>
     </nav>
-    <div class="container py-4">
+    <div class="container" style="padding: 0;">
         <ul class="main-menu" id="mainMenu">
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
