--- a/Sahinh.html
+++ b/Sahinh.html
@@ -82,7 +82,7 @@
         <div class="pdf-header">
             <h1>Hướng dẫn thi sa hình lái xe </h1>
             <div class="pdf-text">
-                <p>Hướng dẫn thi sa hình lái xe ô tô hạng B, C1, C2</p>
+                <p>Hướng dẫn thi sa hình lái xe ô tô hạng B, C1</p>
             </div>
         </div>
         <main class="pdf-fullscreen">
