--- a/Sahinh.html
+++ b/Sahinh.html
@@ -80,9 +80,9 @@
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
         </ul>
         <div class="pdf-header">
-            <h1>Hướng dẫn thi sa hình lái xe </h1>
+            <h1>11 Bài thi sa hình lái xe </h1>
             <div class="pdf-text">
-                <p> 11 Bài thi sa hình lái xe ô tô hạng B, C1</p>
+                <p> Dành cho các hạng B, C1</p>
             </div>
         </div>
         <main class="pdf-fullscreen">
